Add `VORG` table converter

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
-BIN = make_conv_table make_glyphorder conv_name conv_cmap conv_CFF conv_mtx
+BIN = make_conv_table make_glyphorder \
+	conv_name conv_cmap conv_CFF conv_VORG conv_mtx
 
 all: version.hh $(BIN)
 
@@ -25,10 +26,12 @@ CONV_CMAP_OBJS = conv_cmap_main.o walker.o walker_conv.o walker_cmap.o \
 	conv_table.o
 CONV_CFF_OBJS = conv_CFF_main.o walker.o walker_conv.o walker_CFF.o \
 	conv_table.o
+CONV_VORG_OBJS = conv_VORG_main.o conv_table.o
 CONV_MTX_OBJS = conv_mtx_main.o walker.o walker_conv.o conv_table.o
 
 OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
-	$(CONV_NAME_OBJS) $(CONV_CMAP_OBJS) $(CONV_CFF_OBJS) $(CONV_MTX_OBJS)
+	$(CONV_NAME_OBJS) $(CONV_CMAP_OBJS) $(CONV_CFF_OBJS) \
+	$(CONV_VORG_OBJS) $(CONV_MTX_OBJS)
 
 
 #
@@ -76,6 +79,9 @@ conv_cmap: $(CONV_CMAP_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 conv_CFF: $(CONV_CFF_OBJS)
+	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
+
+conv_VORG: $(CONV_VORG_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 conv_mtx: $(CONV_MTX_OBJS)
