Add make_jisx0208_table tool
This tool makes JIS X 0208 conversion tables
from Source Han JIS X 0208 Mapping Table.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
-BIN = make_conv_table make_glyphorder make_kanji_table make_feature_table \
+BIN = make_conv_table make_glyphorder make_kanji_table \
+	make_jisx0208_table make_feature_table \
 	merge_table \
 	conv_name conv_cmap conv_CFF conv_VORG conv_mtx
 
@@ -24,6 +25,8 @@ MAKE_CONV_TABLE_OBJS = make_conv_table_main.o \
 MAKE_GLYPHORDER_OBJS = make_glyphorder_main.o conv_table.o
 MAKE_KANJI_TABLE_OBJS = make_kanji_table_main.o \
 	AI0-SourceHan.o aj1x-kanji.o
+MAKE_JISX0208_TABLE_OBJS = make_jisx0208_table_main.o \
+	jisx0208_mapping.o
 MAKE_FEATURE_TABLE_OBJS = make_feature_table_main.o \
 	 conv_table.o gsub_single.o aj1x-gsub.o
 MERGE_TABLE_OBJS = merge_table_main.o \
@@ -37,7 +40,8 @@ CONV_VORG_OBJS = conv_VORG_main.o conv_table.o
 CONV_MTX_OBJS = conv_mtx_main.o walker.o walker_conv.o conv_table.o
 
 OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
-	$(MAKE_KANJI_TABLE_OBJS) $(MAKE_FEATURE_TABLE_OBJS) \
+	$(MAKE_KANJI_TABLE_OBJS) $(MAKE_JISX0208_TABLE_OBJS) \
+	$(MAKE_FEATURE_TABLE_OBJS) \
 	$(MERGE_TABLE_OBJS) \
 	$(CONV_NAME_OBJS) $(CONV_CMAP_OBJS) $(CONV_CFF_OBJS) \
 	$(CONV_VORG_OBJS) $(CONV_MTX_OBJS)
@@ -82,6 +86,9 @@ make_glyphorder: $(MAKE_GLYPHORDER_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 make_kanji_table: $(MAKE_KANJI_TABLE_OBJS)
+	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
+
+make_jisx0208_table: $(MAKE_JISX0208_TABLE_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 make_feature_table: $(MAKE_FEATURE_TABLE_OBJS)
