--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ BIN = make_conv_table make_glyphorder make_kanji_table \
 	conv_name conv_cmap conv_CFF \
 	conv_GDEF conv_GPOS conv_GSUB \
 	conv_VORG conv_mtx \
-	check_table_CMap
+	check_table_CMap \
+	fix_hmtx
 
 all: version.hh $(BIN)
 
@@ -45,6 +46,7 @@ CONV_GSUB_OBJS = conv_GSUB_main.o conv_table.o
 CONV_VORG_OBJS = conv_VORG_main.o conv_table.o
 CONV_MTX_OBJS = conv_mtx_main.o walker.o walker_conv.o conv_table.o
 CHECK_TABLE_CMAP_OBJS = check_table_CMap_main.o conv_table.o cmapfile.o
+FIX_HMTX_OBJS = fix_hmtx_main.o conv_table.o
 
 OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(MAKE_KANJI_TABLE_OBJS) $(MAKE_JISX0208_TABLE_OBJS) \
@@ -53,7 +55,8 @@ OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(CONV_NAME_OBJS) $(CONV_CMAP_OBJS) $(CONV_CFF_OBJS) \
 	$(CONV_GDEF_OBJS) $(CONV_GPOS_OBJS) $(CONV_GSUB_OBJS) \
 	$(CONV_VORG_OBJS) $(CONV_MTX_OBJS) \
-	$(CHECK_TABLE_CMAP_OBJS)
+	$(CHECK_TABLE_CMAP_OBJS) \
+	$(FIX_HMTX_OBJS)
 
 
 #
@@ -131,6 +134,9 @@ conv_mtx: $(CONV_MTX_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 check_table_CMap: $(CHECK_TABLE_CMAP_OBJS)
+	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
+
+fix_hmtx: $(FIX_HMTX_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 VERSION := $(shell cat ../version.txt)
