Add noEmbed test PDFs generation for typesetting result comparison

--- a/tex/Makefile
+++ b/tex/Makefile
@@ -16,6 +16,8 @@ LUALATEX = lualatex
 XELATEX = xelatex
 
 
+NOEMBED_DIR = noEmbed
+
 PTEX_SOURCES = $(wildcard *.ptex*.tex)
 UPTEX_SOURCES = $(wildcard *.uptex*.tex)
 PLATEX_SOURCES = $(wildcard *.platex*.tex)
@@ -39,8 +41,16 @@ UPTEX_DVIS = $(UPTEX_SOURCES:.tex=.dvi)
 PLATEX_DVIS = $(PLATEX_SOURCES:.tex=.dvi)
 UPLATEX_DVIS = $(UPLATEX_SOURCES:.tex=.dvi)
 
-P_PDFS = $(P_SOURCES:.tex=.pdf)
-UP_PDFS = $(UP_SOURCES:.tex=.pdf)
+P_EMBED_PDFS = $(P_SOURCES:.tex=.pdf)
+UP_EMBED_PDFS = $(UP_SOURCES:.tex=.pdf)
+
+P_NOEMBED_PDFS = $(addprefix $(NOEMBED_DIR)/, \
+		$(filter-out %tex-nomap.pdf,$(P_EMBED_PDFS)))
+UP_NOEMBED_PDFS = $(addprefix $(NOEMBED_DIR)/, \
+		$(filter-out %tex-nomap.pdf,$(UP_EMBED_PDFS)))
+
+P_PDFS = $(P_EMBED_PDFS) $(P_NOEMBED_PDFS)
+UP_PDFS = $(UP_EMBED_PDFS) $(UP_NOEMBED_PDFS)
 
 LUATEX_PDFS = $(LUATEX_SOURCES:.tex=.pdf)
 XETEX_PDFS = $(XETEX_SOURCES:.tex=.pdf)
@@ -53,7 +63,10 @@ PDFS = \
 	$(LUALATEX_PDFS) $(XELATEX_PDFS)
 
 
-all_pdfs: $(PDFS)
+all_pdfs: $(NOEMBED_DIR) $(PDFS)
+
+$(NOEMBED_DIR):
+	mkdir $@
 
 $(PTEX_DVIS): %.dvi: %.tex
 	$(PTEX) $<
@@ -67,29 +80,53 @@ $(PLATEX_DVIS): %.dvi: %.tex
 $(UPLATEX_DVIS): %.dvi: %.tex
 	$(UPLATEX) $<
 
-$(filter %tex.pdf,$(P_PDFS)): %tex.pdf: %tex.dvi
+$(filter %tex.pdf,$(P_EMBED_PDFS)): %tex.pdf: %tex.dvi
 	$(DVIPDFMX) -f map/ptex-haranoaji.map $<
 
-$(filter %tex.pdf,$(UP_PDFS)): %tex.pdf: %tex.dvi
+$(filter %tex.pdf,$(UP_EMBED_PDFS)): %tex.pdf: %tex.dvi
 	$(DVIPDFMX) -f map/uptex-haranoaji.map $<
 
-$(filter %tex-04.pdf,$(P_PDFS)): %tex-04.pdf: %tex-04.dvi
+$(filter %tex-04.pdf,$(P_EMBED_PDFS)): %tex-04.pdf: %tex-04.dvi
 	$(DVIPDFMX) -f map/ptex-haranoaji-04.map $<
 
-$(filter %tex-04.pdf,$(UP_PDFS)): %tex-04.pdf: %tex-04.dvi
+$(filter %tex-04.pdf,$(UP_EMBED_PDFS)): %tex-04.pdf: %tex-04.dvi
 	$(DVIPDFMX) -f map/uptex-haranoaji-04.map $<
 
-$(filter %tex-otf.pdf,$(P_PDFS)): %tex-otf.pdf: %tex-otf.dvi
+$(filter %tex-otf.pdf,$(P_EMBED_PDFS)): %tex-otf.pdf: %tex-otf.dvi
 	$(DVIPDFMX) -f map/otf-haranoaji.map $<
 
-$(filter %tex-otf.pdf,$(UP_PDFS)): %tex-otf.pdf: %tex-otf.dvi
+$(filter %tex-otf.pdf,$(UP_EMBED_PDFS)): %tex-otf.pdf: %tex-otf.dvi
 	$(DVIPDFMX) -f map/otf-up-haranoaji.map $<
 
-$(filter %tex-nomap.pdf,$(P_PDFS)): %tex-nomap.pdf: %tex-nomap.dvi
+$(filter %tex-nomap.pdf,$(P_EMBED_PDFS)): %tex-nomap.pdf: %tex-nomap.dvi
 	$(DVIPDFMX) $<
 
-$(filter %tex-nomap.pdf,$(UP_PDFS)): %tex-nomap.pdf: %tex-nomap.dvi
+$(filter %tex-nomap.pdf,$(UP_EMBED_PDFS)): %tex-nomap.pdf: %tex-nomap.dvi
 	$(DVIPDFMX) $<
+
+$(filter %tex.pdf,$(P_NOEMBED_PDFS)): \
+	$(NOEMBED_DIR)/%tex.pdf: %tex.dvi
+	$(DVIPDFMX) -f ptex-noEmbed.map $< -o $@
+
+$(filter %tex.pdf,$(UP_NOEMBED_PDFS)): \
+	$(NOEMBED_DIR)/%tex.pdf: %tex.dvi
+	$(DVIPDFMX) -f uptex-noEmbed.map $< -o $@
+
+$(filter %tex-04.pdf,$(P_NOEMBED_PDFS)): \
+	$(NOEMBED_DIR)/%tex-04.pdf: %tex-04.dvi
+	$(DVIPDFMX) -f ptex-noEmbed-04.map $< -o $@
+
+$(filter %tex-04.pdf,$(UP_NOEMBED_PDFS)): \
+	$(NOEMBED_DIR)/%tex-04.pdf: %tex-04.dvi
+	$(DVIPDFMX) -f uptex-noEmbed-04.map $< -o $@
+
+$(filter %tex-otf.pdf,$(P_NOEMBED_PDFS)): \
+	$(NOEMBED_DIR)/%tex-otf.pdf: %tex-otf.dvi
+	$(DVIPDFMX) -f otf-noEmbed.map $< -o $@
+
+$(filter %tex-otf.pdf,$(UP_NOEMBED_PDFS)): \
+	$(NOEMBED_DIR)/%tex-otf.pdf: %tex-otf.dvi
+	$(DVIPDFMX) -f otf-up-noEmbed.map $< -o $@
 
 $(LUATEX_PDFS): %.pdf: %.tex
 	$(LUATEX) $<
