--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,7 @@ BIN = make_conv_table make_glyphorder make_kanji_table \
 	ttx_formatter \
 	make_kana_pwid_table \
 	make_vkana_table \
+	make_gsub_single_table \
 
 all: version.hh $(BIN)
 
@@ -62,6 +63,8 @@ MAKE_KANA_PWID_TABLE_OBJS = make_kana_pwid_table_main.o \
 	conv_table.o aj1x-gsub.o
 MAKE_VKANA_TABLE_OBJS = make_vkana_table_main.o \
 	conv_table.o aj1x-gsub.o gsub_single.o
+MAKE_GSUB_SINGLE_TABLE_OBJS = make_gsub_single_table_main.o \
+	conv_table.o copy_and_rotate_table.o aj1x-gsub.o gsub_single.o
 
 OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(MAKE_KANJI_TABLE_OBJS) $(MAKE_JISX0208_TABLE_OBJS) \
@@ -76,7 +79,8 @@ OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(ADD_CMAP_OBJS) \
 	$(TTX_FORMATTER_OBJS) \
 	$(MAKE_KANA_PWID_TABLE_OBJS) \
-	$(MAKE_VKANA_TABLE_OBJS)
+	$(MAKE_VKANA_TABLE_OBJS) \
+	$(MAKE_GSUB_SINGLE_TABLE_OBJS)
 
 
 #
@@ -175,6 +179,9 @@ make_kana_pwid_table: $(MAKE_KANA_PWID_TABLE_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 make_vkana_table: $(MAKE_VKANA_TABLE_OBJS)
+	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
+
+make_gsub_single_table: $(MAKE_GSUB_SINGLE_TABLE_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 VERSION := $(shell cat ../version.txt)
