--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,7 @@ BIN = make_conv_table make_glyphorder make_kanji_table \
 	ttx_formatter \
 	make_kana_pwid_table \
 	make_vkana_table \
+	make_hkana_table \
 	make_gsub_single_table \
 
 all: version.hh $(BIN)
@@ -63,6 +64,8 @@ MAKE_KANA_PWID_TABLE_OBJS = make_kana_pwid_table_main.o \
 	conv_table.o aj1x-gsub.o
 MAKE_VKANA_TABLE_OBJS = make_vkana_table_main.o \
 	conv_table.o aj1x-gsub.o gsub_single.o
+MAKE_HKANA_TABLE_OBJS = make_hkana_table_main.o \
+	conv_table.o aj1x-gsub.o
 MAKE_GSUB_SINGLE_TABLE_OBJS = make_gsub_single_table_main.o \
 	conv_table.o copy_and_rotate_table.o aj1x-gsub.o gsub_single.o
 
@@ -80,6 +83,7 @@ OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(TTX_FORMATTER_OBJS) \
 	$(MAKE_KANA_PWID_TABLE_OBJS) \
 	$(MAKE_VKANA_TABLE_OBJS) \
+	$(MAKE_HKANA_TABLE_OBJS) \
 	$(MAKE_GSUB_SINGLE_TABLE_OBJS)
 
 
@@ -179,6 +183,9 @@ make_kana_pwid_table: $(MAKE_KANA_PWID_TABLE_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 make_vkana_table: $(MAKE_VKANA_TABLE_OBJS)
+	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
+
+make_hkana_table: $(MAKE_HKANA_TABLE_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 make_gsub_single_table: $(MAKE_GSUB_SINGLE_TABLE_OBJS)
