--- a/src/Makefile
+++ b/src/Makefile
@@ -16,6 +16,7 @@ BIN = make_conv_table make_glyphorder make_kanji_table \
 	make_hkana_table \
 	make_gsub_single_table \
 	make_gsub_vert_from_pwidvert \
+	modify_table_vkana_gpos \
 
 all: version.hh $(BIN)
 
@@ -77,6 +78,8 @@ MAKE_GSUB_SINGLE_TABLE_OBJS = make_gsub_single_table_main.o \
 	conv_table.o copy_and_rotate_table.o aj1x-gsub.o gsub_single.o
 MAKE_GSUB_VERT_FROM_PWIDVERT_OBJS = make_gsub_vert_from_pwidvert_main.o \
 	copy_and_rotate_table.o aj1x-gsub.o gsub_single.o
+MODIFY_TABLE_VKANA_GPOS_OBJS = modify_table_vkana_gpos_main.o \
+	conv_table.o aj1x-gsub.o
 
 OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(MAKE_KANJI_TABLE_OBJS) $(MAKE_JISX0208_TABLE_OBJS) \
@@ -95,7 +98,8 @@ OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(MAKE_VKANA_TABLE_OBJS) \
 	$(MAKE_HKANA_TABLE_OBJS) \
 	$(MAKE_GSUB_SINGLE_TABLE_OBJS) \
-	$(MAKE_GSUB_VERT_FROM_PWIDVERT_OBJS)
+	$(MAKE_GSUB_VERT_FROM_PWIDVERT_OBJS) \
+	$(MODIFY_TABLE_VKANA_GPOS_OBJS)
 
 
 #
@@ -209,6 +213,9 @@ make_gsub_single_table: $(MAKE_GSUB_SINGLE_TABLE_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 make_gsub_vert_from_pwidvert: $(MAKE_GSUB_VERT_FROM_PWIDVERT_OBJS)
+	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
+
+modify_table_vkana_gpos: $(MODIFY_TABLE_VKANA_GPOS_OBJS)
 	$(LINK.cc) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 VERSION := $(shell cat ../version.txt)
