--- a/src/Makefile
+++ b/src/Makefile
@@ -95,6 +95,7 @@ OBJS = $(MAKE_CONV_TABLE_OBJS) $(MAKE_GLYPHORDER_OBJS) \
 	$(ADD_CMAP_OBJS) \
 	$(TTX_FORMATTER_OBJS) \
 	$(MAKE_KANA_PWID_TABLE_OBJS) \
+	$(MAKE_KANA_PWIDVERT_TABLE_OBJS) \
 	$(MAKE_VKANA_TABLE_OBJS) \
 	$(MAKE_HKANA_TABLE_OBJS) \
 	$(MAKE_GSUB_SINGLE_TABLE_OBJS) \
